Reposition recent tabs based on grid margin and spacing; fix #58

--- a/content/newTab.css
+++ b/content/newTab.css
@@ -35,14 +35,28 @@ input[type=button] {
   background-color: hsl(0, 0%, 95%);
 }
 /* RECENT TABS */
+#newtab-recent-outer,
+#newtab-undo-container {
+  margin-top: -1px;
+  margin-bottom: 3px;
+}
+:root[spacing="medium"] #newtab-margin-top:-moz-any(.medium, .large) :-moz-any(#newtab-recent-outer, #newtab-undo-container) {
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+:root[spacing="large"] #newtab-margin-top:-moz-any(.medium, .large) :-moz-any(#newtab-recent-outer, #newtab-undo-container) {
+  margin-top: 0;
+  margin-bottom: 18px;
+}
+
 #newtab-recent-outer {
   white-space: nowrap;
   line-height: 28px;
   -moz-box-flex: 1;
-  margin-bottom: 2px;
 }
 #newtab-recent {
   overflow: hidden;
+  height: 28px;
 }
 #newtab-recent > span {
   display: inline-block;
@@ -90,8 +104,8 @@ input[type=button] {
   -moz-box-align: center;
   -moz-box-pack: center;
   -moz-margin-start: 1em;
-  margin-bottom: 2px;
   padding: 4px 3px;
+  line-height: 18px;
   border: 1px solid;
   border-color: rgba(8, 22, 37, 0.12) rgba(8, 22, 37, 0.14) rgba(8, 22, 37, 0.16);
   background-color: rgba(255, 255, 255, 0.4);
